--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,9 @@
     height: 100%;
     width: 100%;
     background-color: rgba(1, 1, 1, 0.04);
+    display: grid;
+    grid-template-columns: 1fr 5fr 1fr;
+    grid-template-rows: 1fr 5fr 1fr;
 }
 
 /******************/
@@ -15,14 +18,24 @@
 #NavBar{
     height: 75px;
     width: 100%;
+    grid-column: 2 /2;
+    grid-row: 2 / 2;
+    display: flex;
+    align-items: center;
+/*    -ms-transform: translate(-50%, -50%);*/
+/*    transform: translate(-50%, -50%);*/
+}
+
+.navLink{
+    flex-direction: row;
+    
 }
 
 .navButton{
     height: 45px;
-    width: auto;
-    position: relative;
+    width: 133px;
     border-style: none;
-    background-color: pink;
+    background-color: rgba(1, 1, 2, 0.058);
 }
 
 .button{
