Days to christmas don & working on new content layout. Next labb almost don.

--- a/css/layout/indexGrid.css
+++ b/css/layout/indexGrid.css
@@ -91,6 +91,14 @@
     grid-row: 2 / 2;
 }
 
+/**********************************/
+/***    Site-Content - Grid     ***/
+#Site-Content{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(5, 1fr);
+}
+
 /***********************/
 /***    Footer Grid  ***/
 #Footer{
