--- a/css/layout/indexGrid.css
+++ b/css/layout/indexGrid.css
@@ -96,8 +96,39 @@
 #Site-Content{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(5, 1fr);
+    grid-template-rows: repeat(6, auto);
 }
+
+.item{
+    min-height: 20px;
+    max-height: 50px;
+    width: 100%;
+}
+.item > p{
+    font-weight: lighter;
+}
+
+#item-1{
+    grid-column: 1 / 1;
+    grid-row: 2 / 2;
+}
+#item-2{
+    grid-column: 1 / 1;
+    grid-row: 3 / 3;
+}
+#item-3{
+    grid-column: 1 / 1;
+    grid-row: 4 / 4; 
+}
+#item-4{
+    grid-column: 1 / 1;
+    grid-row: 5 / 5;
+}
+#item-5{
+    grid-column: 1 / 1;
+    grid-row: 6 / 6;
+}
+
 
 /***********************/
 /***    Footer Grid  ***/
