--- a/css/style/indexStyle.css
+++ b/css/style/indexStyle.css
@@ -3,13 +3,13 @@
 /***    A Elemnet is only called one in this document ***/
 
 #Wrapper{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     margin: 0 auto;;
 }
 
 #Top-Container{
-    height: 100%;
+    height: 80px;
     width: 100%;
     background-color: rgba(1, 1, 1, 0.06);
     display: grid;
@@ -88,7 +88,7 @@
 /**************************/
 /***    Page Content    ***/
 #Middle-Container{
-    height: 300px;
+    height: 100%;
     width: 100%;
     background: rgba(204, 255, 204, 0.04);
 }
@@ -96,8 +96,9 @@
 /******************/
 /***    Footer  ***/
 #Footer{
-    height: auto;
+    height: 100px;
     width: 100%;
+    bottom: 0;
     border-top-style: double;
     border-top-color: gray;
 }
