--- a/css/layout/indexGrid.css
+++ b/css/layout/indexGrid.css
@@ -15,7 +15,7 @@
 #Wrapper{
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto;
+    grid-template-rows: 1fr 10fr 1fr;
 
 }
 
@@ -99,11 +99,6 @@
     grid-template-rows: repeat(6, auto);
 }
 
-.item{
-    min-height: 20px;
-    max-height: 50px;
-    width: 100%;
-}
 .item > p{
     font-weight: lighter;
 }
