--- a/css/browserReset/default.css
+++ b/css/browserReset/default.css
@@ -1,7 +1,8 @@
 body{
     margin: 0px;
     pad: 0px;
-    background-image: url("../../images/cover/cover1.jpg");
+	background-image: url("../../images/cover/cover1.jpg");
+	background-size: cover;
 }
 
 /*******************************************/
