--- a/css/layout/indexFlex.css
+++ b/css/layout/indexFlex.css
@@ -39,3 +39,15 @@
 #Button-5{
     order: 5;
 }
+
+#item-3{
+    display: flex;
+    flex-direction: row;
+}
+#item-3 > h2{
+    order: 1;
+}
+#item-3 > p{
+    order: 2;
+    height: 100%;
+}
